Wed Oct 29 19:58:59 2003  NAKAMURA Usaku <usa@ruby-lang.org>

	* ext/tcltklib/tcltklib.c (CONST84): define CONST84 when it is not
	  defined and TCL_MAJOR_VERSION >= 8.

	* ext/tcltklib/tcltklib.c (VwaitVarProc, WaitVariableProc,
	  rb_threadVwaitProc): use CONST84 instead of CONST.

	* ext/tcltklib/tcltklib.c (ip_rbTkWaitCommand,
	  ip_rb_threadTkWaitCommand): use CONST84 always.

Wed Oct 29 17:27:05 2003  Tanaka Akira  <akr@m17n.org>

	* re.c (rb_reg_s_union, Init_Regexp): new method `Regexp.union'.

	* lib/pathname.rb (realpath): examine Dir.pwd because it may have
	  symlinks.

Wed Oct 29 17:16:31 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_longjmp): must not disturb original jump.
	  [ruby-dev:21733]

Wed Oct 29 15:28:34 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (Init_Proc): taint preallocated exception object
	  sysstack_error. [ruby-talk:84534]

Wed Oct 29 11:27:39 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (ret_args): node may be NULL. [ruby-talk:84530]

Tue Oct 28 15:20:12 2003  NAKAMURA Usaku <usa@ruby-lang.org>

	* ext/tcltklib/tcltklib.c (VwaitVarProc, ip_rbVwaitObjCmd, 
	  WaitVariableProc, WaitVisibilityProc, WaitWindowProc,
	  ip_rbTkWaitObjCmd, ip_rbTkWaitCommand, rb_threadVwaitProc,
	  rb_threadWaitVisibilityProc, rb_threadWaitWindowProc,
	  ip_rb_threadVwaitObjCmd, ip_rb_threadTkWaitObjCmd): prototype;
	  avoid VC++ warnings.

Tue Oct 28 11:24:18 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (new_yield): remove magic argument rule; "yield [1,2]"
	  should yield single array of two elements, not two values.
	  [ruby-dev:21726]

Mon Oct 27 19:19:55 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_longjmp): ignore reentering error while warning.
	  [ruby-dev:21730]

Mon Oct 27 00:23:50 2003  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (ip_ruby): bug fix on Win : hang-up when
	  calling 'exit' in the Tk callback procedure. [ruby-list:38656]
